@@ -1,3 +1,7 @@
+2010-01-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/AlcatelLucent.pm: new discovery module
+
 2010-01-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover.pm (discover):
